Fixed a mixed issue with the project image size on mobile.

--- a/style.css
+++ b/style.css
@@ -844,7 +844,7 @@ img.mockup {
     }
 
     a.item {
-        height: 210px;
+        height: 300px;
     }
 
     .project_item.current-item a.item {
